# Barrel

./: CMakeLists.txt  Doxyfile  README.md
include/: barrel.h  brlalg.h  brlbool.h  brldef.h  brlextc.h  brlstdlib.h  brlutil.h
sample/: create.c  read.c  read_chunked.c
src/: barrel.c  brlalg.c  brlutil.c
tools/builder/: CMakeLists.txt  main.c
tools/dumper/: CMakeLists.txt  main.c
